overflow fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,8 +8,7 @@
 * { margin: 0; padding: 0;}
 
 html, body {
-	max-width: 100%;
-	overflow-x: hidden;
+
 }
 
 body {
